--- a/src/index.html
+++ b/src/index.html
@@ -11,24 +11,12 @@
 </head>
 <body>
 	//= template/header.html
-	<div class="container">
-		<div class="items">
-			<div class="item">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab et dicta illum modi natus a maxime, quis quaerat perferendis, quas tempore dignissimos, blanditiis distinctio accusamus nulla tempora, voluptates repudiandae ipsam.</p>
-			</div>
-			<div class="item">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab et dicta illum modi natus a maxime, quis quaerat perferendis, quas tempore dignissimos, blanditiis distinctio accusamus nulla tempora, voluptates repudiandae ipsam.</p>
-			</div>
-			<div class="item">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab et dicta illum modi natus a maxime, quis quaerat perferendis, quas tempore dignissimos, blanditiis distinctio accusamus nulla tempora, voluptates repudiandae ipsam.</p>
-			</div>
-			<div class="item">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab et dicta illum modi natus a maxime, quis quaerat perferendis, quas tempore dignissimos, blanditiis distinctio accusamus nulla tempora, voluptates repudiandae ipsam.</p>
-			</div>
-			<div class="item">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab et dicta illum modi natus a maxime, quis quaerat perferendis, quas tempore dignissimos, blanditiis distinctio accusamus nulla tempora, voluptates repudiandae ipsam.</p>
-			</div>
-		</div>
+	<div class="wrap">
+		<div class="expample"></div>
+		<div class="expample"></div>
+		<div class="expample"></div>
+		<div class="expample"></div>
+		<div class="expample"></div>
 	</div>
 	//= template/footer.html
 	<script src="js/libs.js"></script>
