small-changes-structure

--- a/src/index.html
+++ b/src/index.html
@@ -7,20 +7,27 @@
 	<title>Главная</title>
 	<meta name="description" content="Description of the page less than 150 characters">
 	<link rel="stylesheet" href="css/libs.css">
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/common.css">
 </head>
 <body>
 	//= template/header.html
-	<div class="wrap">
-		<div class="expample"></div>
-		<div class="expample"></div>
-		<div class="expample"></div>
-		<div class="expample"></div>
-		<div class="expample"></div>
+	<p>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati dolorem inventore accusamus laboriosam ab, beatae blanditiis fugiat quam molestiae harum quisquam eius eum id repudiandae natus. Soluta sequi, delectus illum.
+	</p>
+	<input type="text" placeholder="Write here">
+	<div>
+		<p class="media m-down">до 375</p>
+		<p class="media between-m-sm">от 375 до 576</p>
+		<p class="media between-sm-md">от 576 до 768</p>
+		<p class="media between-md-lg">от 768 до 992</p>
+		<p class="media between-lg-xl">от 992 до 1200</p>
+		<p class="media between-xl-vl">от 1200 до 1400</p>
+		<p class="media between-vl-sl">от 1400 до 1600</p>
+		<p class="media sl-up">от 1600 и выше</p>
 	</div>
 	//= template/footer.html
 	<script src="js/libs.js"></script>
-	<script src="js/main.js"></script>
+	<script src="js/common.js"></script>
 </body>
 </html>
 
