some_changes_in_mixins

--- a/src/index.html
+++ b/src/index.html
@@ -11,15 +11,9 @@
 </head>
 <body>
 	//= template/header.html
-	<p>
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati dolorem inventore accusamus laboriosam ab, beatae blanditiis fugiat quam molestiae harum quisquam eius eum id repudiandae natus. Soluta sequi, delectus illum.
-	</p>
+	<p style="font-size: 2rem" class="text-center">Скоро здесь будет main</p>
 	//= template/footer.html
 	<script src="js/libs.js"></script>
 	<script src="js/common.js"></script>
 </body>
 </html>
-
-
-
-
