modal, responsive fonts

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,23 @@
 </head>
 <body>
 	//= template/header.html
-	<p style="font-size: 2rem" class="text-center">Скоро здесь будет main</p>
+	<main>
+		<div class="container">
+			<div class="row mt-5">
+				<div class="col text-center">
+					<button type="button" data-modal-open="modal-example">Open modal</button>
+				</div>
+			</div>
+			<div class="row mt-5">
+				<div class="col">
+					<p class="example-responsive-text text-center">
+					Lorem ipsum dolor sit amet ex deserunt!</p>
+				</div>
+			</div>
+		</div>
+	</main>
 	//= template/footer.html
+	//= template/modal.html
 	<script src="js/libs.js"></script>
 	<script src="js/common.js"></script>
 </body>
