libs.scss and modal.js

--- a/src/index.html
+++ b/src/index.html
@@ -13,15 +13,14 @@
 	//= template/header.html
 	<main>
 		<div class="container">
-			<div class="row mt-5">
+			<div class="row mt-3 mt-lg-5">
 				<div class="col text-center">
-					<button type="button" data-modal-open="modal-example">Open modal</button>
+					<button type="button" data-modal-open="modal-example">Open modal window</button>
 				</div>
 			</div>
 			<div class="row mt-5">
 				<div class="col">
-					<p class="example-responsive-text text-center">
-					Lorem ipsum dolor sit amet ex deserunt!</p>
+					<p class="example-responsive-text text-center"><b>Soon here will be the content of the site</b></p>
 				</div>
 			</div>
 		</div>
@@ -29,6 +28,7 @@
 	//= template/footer.html
 	//= template/modal.html
 	<script src="js/libs.js"></script>
+	<script src="js/modal.js"></script>
 	<script src="js/common.js"></script>
 </body>
 </html>
