--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -10,19 +10,17 @@
 	<link rel="stylesheet" href="css/common.css">
 </head>
 <body>
-		~include('../template/header.html')
+		~include('../common/header.html')
 	<main>
 		<div class="container">
 			<div class="row align-items-center mt-5">
 				<div class="col-lg-6 order-2 order-lg-1">
 					<h1 class="example-responsive-text">In this template</h1>
 					~loop('../template/list.html', [
-					{ "title": "- Javascript ES6 Modules transpilable in ES5"},
-					{ "title": "- Sass: grid-generator, useful mixins, media-queries"},
-					{ "title": "- SVG-sprites, support - IE8 and upper"},
-					{ "title": "- HTML-templates"},
-					{ "title": "- Automatic cache cleaning"},
-					{ "title": "- Are divided <b>gulp</b> tasks on development and production mode"}
+					{ "paragraph": "- Javascript ES6 Modules - processing using Webpack 4"},
+					{ "paragraph": "- Sass - grid-generator, useful mixins, variables"},
+					{ "paragraph": "- SVG-sprites"},
+					{ "paragraph": "- HTML-templates"}
 					])
 				</div>
 				<div class="col-lg-auto ml-lg-auto order-1 order-lg-2 mb-3 mb-lg-0">
@@ -31,15 +29,9 @@
 					</a>
 				</div>
 			</div>
-			<div class="row mt-3">
-				<div class="col">
-          <h2>This is output from axios.get:</h2>
-					<p id="output"></p>
-				</div>
-			</div>
 		</div>
 	</main>
-		~include('../template/footer.html')
+		~include('../common/footer.html')
 	<script src="js/bundle.min.js"></script>
 </body>
 </html>
