partial connection jQuery implemented

--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -14,14 +14,15 @@
 	<main>
 		<div class="container">
 			<div class="row align-items-center mt-5">
-				<div class="col-lg-6 order-2 order-lg-1">
+				<div class="col-lg-8 order-2 order-lg-1">
 					<h1 class="example-responsive-text">In this template</h1>
-					~loop('../template/list.html', [
-					{ "paragraph": "- Javascript ES6 Modules - processing using Webpack 4"},
-					{ "paragraph": "- Sass - grid-generator, useful mixins, variables"},
-					{ "paragraph": "- SVG-sprites"},
-					{ "paragraph": "- HTML-templates"}
-					])
+					<ul>
+						<li class="list-item">- Javascript ES6 Modules - processing using Webpack 4</li>
+						<li class="list-item">- jQuery - using with ProvidePlugin and partial include - just what we use</li>
+						<li class="list-item">- Sass - grid-generator, useful mixins, variables</li>
+						<li class="list-item">- SVG-sprites</li>
+						<li class="list-item">- HTML-templates</li>
+					</ul>
 				</div>
 				<div class="col-lg-auto ml-lg-auto order-1 order-lg-2 mb-3 mb-lg-0">
 					<a href="https://github.com/ToTibis" class="github-link" target="_blank">
