split chunk added

--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -33,6 +33,7 @@
 		</div>
 	</main>
 		~include('../common/footer.html')
-	<script src="js/bundle.min.js"></script>
+	<script src="js/vendors.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
